--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.591.0",
+  "version": "1.592.0-dev.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,12 +42,12 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.207.0",
-    "@salutejs/plasma-hope": "1.352.0",
-    "@salutejs/plasma-new-hope": "0.335.0",
-    "@salutejs/plasma-themes": "0.37.0",
-    "@salutejs/plasma-tokens-b2c": "0.64.0",
-    "@salutejs/plasma-tokens-web": "1.68.0",
+    "@salutejs/plasma-core": "1.208.0-dev.0",
+    "@salutejs/plasma-hope": "1.353.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.336.0-dev.0",
+    "@salutejs/plasma-themes": "0.38.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.65.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.69.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -71,9 +71,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.137.0",
-    "@salutejs/plasma-icons": "1.223.0",
-    "@salutejs/plasma-sb-utils": "0.207.0",
+    "@salutejs/plasma-cy-utils": "0.138.0-dev.0",
+    "@salutejs/plasma-icons": "1.224.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.208.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
