--- a/packages/sdds-finai/package.json
+++ b/packages/sdds-finai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finai",
-  "version": "0.314.0",
+  "version": "0.315.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS FinAI web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/sdds-fiai"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.335.0",
+    "@salutejs/plasma-new-hope": "0.336.0-dev.0",
     "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
@@ -36,10 +36,10 @@
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.207.0",
-    "@salutejs/plasma-cy-utils": "0.137.0",
-    "@salutejs/plasma-icons": "1.223.0",
-    "@salutejs/plasma-sb-utils": "0.207.0",
+    "@salutejs/plasma-core": "1.208.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.138.0-dev.0",
+    "@salutejs/plasma-icons": "1.224.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.208.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
