--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.137.0",
+  "version": "0.138.0-dev.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -25,11 +25,11 @@
   },
   "devDependencies": {
     "@cypress/react": "5.12.0",
-    "@salutejs/plasma-themes": "0.37.0",
+    "@salutejs/plasma-themes": "0.38.0-dev.0",
     "@salutejs/plasma-tokens": "1.122.0",
-    "@salutejs/plasma-tokens-b2b": "1.53.0",
-    "@salutejs/plasma-tokens-b2c": "0.64.0",
-    "@salutejs/plasma-tokens-web": "1.68.0",
+    "@salutejs/plasma-tokens-b2b": "1.54.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.65.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.69.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@salutejs/sdds-themes": "0.47.0",
     "@types/node": "18.16.20",
