--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.594.0-dev.0",
+  "version": "1.594.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,13 +19,13 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.208.0-dev.0",
-    "@salutejs/plasma-hope": "1.353.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.336.0-dev.0",
-    "@salutejs/plasma-themes": "0.38.0-dev.0",
-    "@salutejs/plasma-tokens-b2b": "1.54.0-dev.0",
-    "@salutejs/plasma-tokens-b2c": "0.65.0-dev.0",
-    "@salutejs/plasma-tokens-web": "1.69.0-dev.0",
+    "@salutejs/plasma-core": "1.208.0",
+    "@salutejs/plasma-hope": "1.353.0",
+    "@salutejs/plasma-new-hope": "0.336.0",
+    "@salutejs/plasma-themes": "0.38.0",
+    "@salutejs/plasma-tokens-b2b": "1.54.0",
+    "@salutejs/plasma-tokens-b2c": "0.65.0",
+    "@salutejs/plasma-tokens-web": "1.69.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -49,9 +49,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.138.0-dev.0",
-    "@salutejs/plasma-icons": "1.224.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.208.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.138.0",
+    "@salutejs/plasma-icons": "1.224.0",
+    "@salutejs/plasma-sb-utils": "0.208.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
