--- a/packages/sdds-insol/package.json
+++ b/packages/sdds-insol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-insol",
-  "version": "0.319.0-dev.0",
+  "version": "0.319.0",
   "description": "Salute Design System / React UI kit for SDDS INSOL web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "directory": "packages/sdds-insol"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.336.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.336.0",
     "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
@@ -57,10 +57,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.208.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.138.0-dev.0",
-    "@salutejs/plasma-icons": "1.224.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.208.0-dev.0",
+    "@salutejs/plasma-core": "1.208.0",
+    "@salutejs/plasma-cy-utils": "0.138.0",
+    "@salutejs/plasma-icons": "1.224.0",
+    "@salutejs/plasma-sb-utils": "0.208.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
