--- a/website/sdds-serv-docs/package.json
+++ b/website/sdds-serv-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-serv-docs",
-  "version": "0.314.0-dev.0",
+  "version": "0.314.0",
   "description": "SDDS SERV documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,10 +31,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.505.0-dev.0",
-    "@salutejs/plasma-icons": "1.224.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.505.0",
+    "@salutejs/plasma-icons": "1.224.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-serv": "0.323.0-dev.0",
+    "@salutejs/sdds-serv": "0.323.0",
     "@salutejs/sdds-themes": "0.47.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
