--- a/packages/sdds-finai/package.json
+++ b/packages/sdds-finai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finai",
-  "version": "0.315.0",
+  "version": "0.316.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS FinAI web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/sdds-fiai"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.336.0",
+    "@salutejs/plasma-new-hope": "0.337.0-dev.0",
     "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
