--- a/packages/sdds-scan/package.json
+++ b/packages/sdds-scan/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-scan",
-  "version": "0.322.0",
+  "version": "0.323.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS SCAN web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "directory": "packages/sdds-scan"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.336.0",
+    "@salutejs/plasma-new-hope": "0.337.0-dev.0",
     "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
