--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.351.0",
+  "version": "0.352.0-dev.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.337.0",
+    "@salutejs/plasma-new-hope": "0.338.0-dev.0",
     "@salutejs/plasma-tokens": "1.122.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-typo": "0.42.0"
@@ -41,7 +41,7 @@
     "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-core": "1.208.0",
     "@salutejs/plasma-cy-utils": "0.138.0",
-    "@salutejs/plasma-icons": "1.224.0",
+    "@salutejs/plasma-icons": "1.225.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.208.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
