--- a/packages/plasma-hope/package.json
+++ b/packages/plasma-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-hope",
-  "version": "1.353.0",
+  "version": "1.354.0-dev.0",
   "description": "Salute Design System / Internal React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -58,7 +58,7 @@
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-cy-utils": "0.138.0",
-    "@salutejs/plasma-icons": "1.224.0",
+    "@salutejs/plasma-icons": "1.225.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.208.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
