--- a/packages/sdds-serv/package.json
+++ b/packages/sdds-serv/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-serv",
-  "version": "0.324.0",
+  "version": "0.325.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS SERV web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -33,7 +33,7 @@
     "directory": "packages/sdds-serv"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.337.0",
+    "@salutejs/plasma-new-hope": "0.338.0-dev.0",
     "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
@@ -66,7 +66,7 @@
     "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-core": "1.208.0",
     "@salutejs/plasma-cy-utils": "0.138.0",
-    "@salutejs/plasma-icons": "1.224.0",
+    "@salutejs/plasma-icons": "1.225.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.208.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
