--- a/website/plasma-giga-docs/package.json
+++ b/website/plasma-giga-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga-docs",
-  "version": "0.114.0",
+  "version": "0.115.0-dev.0",
   "description": "PLASMA GIGA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,9 +31,9 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.506.0",
-    "@salutejs/plasma-giga": "0.320.0",
-    "@salutejs/plasma-icons": "1.224.0",
+    "@salutejs/plasma-docs-ui": "0.507.0-dev.0",
+    "@salutejs/plasma-giga": "0.321.0-dev.0",
+    "@salutejs/plasma-icons": "1.225.0-dev.0",
     "@salutejs/plasma-themes": "0.38.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
