--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.596.0-dev.0",
+  "version": "1.596.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@salutejs/plasma-core": "1.208.0",
-    "@salutejs/plasma-hope": "1.354.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.338.0-dev.0",
+    "@salutejs/plasma-hope": "1.354.0",
+    "@salutejs/plasma-new-hope": "0.338.0",
     "@salutejs/plasma-themes": "0.38.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
@@ -50,7 +50,7 @@
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-cy-utils": "0.138.0",
-    "@salutejs/plasma-icons": "1.225.0-dev.0",
+    "@salutejs/plasma-icons": "1.225.0",
     "@salutejs/plasma-sb-utils": "0.208.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
